@@ -1,4 +1,7 @@
 Changes in version 0.1.2.3-alpha - 2006-10-??
+  o Minor features, controller:
+    - Add a REASON field to CIRC events. (Patch from Mike Perry)
+
   o Minor bugfixes:
     - Change NT service functions to be loaded on demand.  This lets us
       build with mingw without breaking Tor for Windows 98 users.
